--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,19 @@
 steps:
 
+#############################################################################
 #
 # Shallow clone repository specified by `_REPO_URL` substitution into ./build
 #
+#############################################################################
 - name: 'gcr.io/cloud-builders/git'
   args: ['clone', '$_REPO_URL', 'build']
 
+  
+#############################################################################
 #
 # Build and tag the Docker image
 #
+#############################################################################
 - name: 'gcr.io/cloud-builders/docker'
   entrypoint: 'sh'
   dir: 'build'
@@ -33,10 +38,12 @@ steps:
       echo ==== BUILDING ====
       docker build -t gcr.io/$PROJECT_ID/pipeline-product:latest .
 
-# TEMPORARY STEP ONLY
+
+############################## TEMPORARY STEP ONLY ##########################
 #
 # Runs the resulting image
 #
+#############################################################################
 - name: 'gcr.io/cloud-builders/docker'
   entrypoint: 'sh'
   dir: 'build'
@@ -49,9 +56,39 @@ steps:
         docker run -d -p 80:8000 gcr.io/$PROJECT_ID/pipeline-product:latest
       # fi
 
+
+#############################################################################
+#
+# Validate 
+# (disabled until we work out container introspection)
+#
+#############################################################################
+# - name: 'gcr.io/cloud-builders/curl'
+#   args: []
+
+
+#############################################################################
+#
+# Deploy
+# (disabled to avoid billing)
+#
+#############################################################################
+# - name: 'gcr.io/cloud-builders/kubectl'
+#   args:
+#   - 'set'
+#   - 'image'
+#   - 'deployment/my-deployment'
+#   - 'my-container=gcr.io/$PROJECT_ID/pipeline-product:$REVISION_ID'
+#   env:
+#   - 'CLOUDSDK_COMPUTE_ZONE=us-east4-b'
+#   - 'CLOUDSDK_CONTAINER_CLUSTER=my-cluster'
+
+
+#############################################################################
 #
 # VARIABLE SUBSTITUTIONS
 #
+#############################################################################
 substitutions:
   _REPO_URL: '** use --substitutions _REPO_URL=https://your.repo/here.git **'
   _SHOULD_RUN_IMAGE: ''
